Frankbelford/uatv1ba/force-app/main/default/objects/Idea__c/fields/count_of_comments__c.field-meta.xml
<CustomField>
    <fullName>count_of_comments__c</fullName>
    <label>count of comments</label>
    <summaryForeignKey>Idea_Comments__c.IP_Idea__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>