Frankbelford/uatv1ba/force-app/main/default/objects/Idea__c/fields/Created_Date_Value__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Value__c</fullName>
    <formula>YEAR(TODAY ())  - YEAR(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>