Frankbelford/uatv1ba/force-app/main/default/objects/Idea__c/fields/IP_Category__c.field-meta.xml
<CustomField>
    <fullName>IP_Category__c</fullName>
    <inlineHelpText>Which categories does this Idea fit into?
You can add more than one category</inlineHelpText>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Improvement</fullName>
            </value>
            <value>
                <fullName>Fix a Problem</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Shift Management</fullName>
            </value>
            <value>
                <fullName>Candidate Portal</fullName>
            </value>
            <value>
                <fullName>Client Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>