Frankbelford/uatv1ba/force-app/main/default/objects/Idea__c/fields/IP_Description__c.field-meta.xml
<CustomField>
    <fullName>IP_Description__c</fullName>
    <description>Describe your Idea in as much detail as you can</description>
    <inlineHelpText>Describe your Idea in as much detail as you can</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>