Frankbelford/uatv1ba/force-app/main/default/objects/Idea__c/fields/IP_Headline__c.field-meta.xml
<CustomField>
    <fullName>IP_Headline__c</fullName>
    <description>Short outline of the Idea that you have must be less than 255 characters</description>
    <inlineHelpText>Short outline of the Idea that you have must be less than 255 characters</inlineHelpText>
    <label>Headline</label>
    <type>TextArea</type>
</CustomField>