Frankbelford/uatv1ba/force-app/main/default/objects/Idea__c/fields/IP_Points__c.field-meta.xml
<CustomField>
    <fullName>IP_Points__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>