Frankbelford/uatv1ba/force-app/main/default/objects/Idea__c/fields/IP_Responce__c.field-meta.xml
<CustomField>
    <fullName>IP_Responce__c</fullName>
    <description>Populated if the Idea is Closed, rejected, Approved, duplicated or delivered</description>
    <label>Responce</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>