Frankbelford/uatv1ba/force-app/main/default/objects/Idea__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Idea Submitted</fullName>
                <default>true</default>
                <label>Idea Submitted</label>
            </value>
            <value>
                <fullName>Thinking Forum</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Requirements Gathering</fullName>
            </value>
            <value>
                <fullName>Further Consideration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>