Frankbelford/uatv1ba/force-app/main/default/objects/Idea__c/listViews/Ideas_all_except_dup_del_reje.listView-meta.xml
<ListView>
    <fullName>Ideas_all_except_dup_del_reje</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>IP_Headline__c</columns>
    <columns>Status__c</columns>
    <columns>IP_Points__c</columns>
    <columns>IP_TotalPoints__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Idea Submitted,Thinking Forum,Duplicate,Rejected,Approved,Delivered,Requirements Gathering,Further Consideration</value>
    </filters>
    <label>Ideas - submitted</label>
</ListView>